show post details

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -6,3 +6,11 @@ body{
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
+.post-show-container{
+  border: 4px solid #DED7D4;  
+}
+
+.comment-show{
+  border: 4px solid #DED7D4;   
+}
