--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -9,10 +9,13 @@ body{
 
 .post-show-container{
   border: 4px solid #DED7D4;  
+  padding-bottom: 20px;
 }
 
 .comment-show{
-  border: 4px solid #DED7D4;   
+  border-bottom: 1px solid #DED7D4;
+  margin-bottom: 10px;
+  padding-bottom: 11px;  
 }
 
 .comment-field{
